CHANGELOG

2014-02-21  1.9.0

      * Fixed pagination starting at 1 in Kaminari & WillPaginate and 0 in Algolia

2014-02-15  1.8.2

      * Ability to retrieve facets and raw answer as well

2014-02-14  1.8.1

      * Fixed backend pagination not taking current page into account at display time.

2014-02-12  1.8.0

      * Upgrade to official Twitter Typeahead.js 0.10.1 (/!\ API has changed)
      * Fixed reindexing rake task (#12)

2014-02-04  1.7.2

      * Add a ```raw_search``` method, retrieving the JSON raw answer
      * Support STI subclasses (#11)
      * Updated dependencies

2014-01-31  1.7.1

      * Ensure methods are not conflicting with already defined ones (use algolia_METHOD_NAME)
      * Add ```:if``` and ```:unless``` options to control objects indexing (#10)

2014-01-07  1.7.0

      * Updated algoliasearch to 1.2 (httpclient instead of curb as underlying HTTP layer)
      * jruby, rbx and ruby 2.1 compatibility

2014-01-02  1.6.3

      * Expose new ```attributeForDistinct``` setting

2013-12-17  1.6.2

      * Updated deps (included algoliasearch 1.1.15 and algoliasearch-client-js 2.3.6)

2013-12-05  1.6.1

      * ```add_attribute``` can now be used to add extra attributes in addition to the existing ones
      * Use the ```geoloc``` and ```tags``` methods to generate the associated ```_tags``` and ```_geoloc``` attributes

2013-12-05  1.5.2

      * object's attributes must be fetched unscoped to ensure associations will not be impacted by the conditions
      * you can now use `Model.index` to access the underlying index object

2013-12-03  1.5.1

      * ability to specify which attribute is used as objectID

2013-11-29  1.4.5

      * updated algoliasearch-client-js to 2.3.3

2013-11-29  1.4.4

      * updated algoliasearch to 1.1.11

2013-11-29  1.4.3

      * updated algoliasearch-client-js to 2.3.2
      * updated algoliasearch to 1.1.10

2013-11-25  1.4.2

      * fixed const_get calls with ruby 1.9.3

2013-11-25  1.4.1
