@@ -58,7 +58,7 @@ Gem::Specification.new do |s|
 
     if Gem::Version.new(Gem::VERSION) >= Gem::Version.new('1.2.0') then
       s.add_runtime_dependency(%q<json>, [">= 1.5.1"])
-      s.add_runtime_dependency(%q<algoliasearch>, [">= 1.2.0"])
+      s.add_runtime_dependency(%q<algoliasearch>, [">= 1.2.4"])
       s.add_development_dependency(%q<will_paginate>, [">= 2.3.15"])
       s.add_development_dependency(%q<kaminari>, [">= 0"])
       s.add_development_dependency "travis"
@@ -66,11 +66,11 @@ Gem::Specification.new do |s|
       s.add_development_dependency "rdoc"
     else
       s.add_dependency(%q<json>, [">= 1.5.1"])
-      s.add_dependency(%q<algoliasearch>, [">= 1.2.0"])
+      s.add_dependency(%q<algoliasearch>, [">= 1.2.4"])
     end
   else
     s.add_dependency(%q<json>, [">= 1.5.1"])
-    s.add_dependency(%q<algoliasearch>, [">= 1.2.0"])
+    s.add_dependency(%q<algoliasearch>, [">= 1.2.4"])
   end
 end
 
